fix navbar blur to remove flickering

--- a/src/_components/shared/navbar.css
+++ b/src/_components/shared/navbar.css
@@ -1,6 +1,6 @@
 header {
   align-items: center;
-  backdrop-filter: blur(var(--spacing-8));
+  backdrop-filter: blur(var(--spacing-2));
   border-bottom: var(--border-default);
   display: grid;
   gap: var(--gap-default);
